--- a/tareas.ipynb
+++ b/tareas.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f67eb66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "import matplotlib \n",
+    "\n",
+    "from time import time\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "15b96ae8",
    "metadata": {},
@@ -12,13 +38,52 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "84fa9c4c",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folder = \"C:/Users/maria/Downloads/ages/train\" \n",
+    "\n",
+    "nclasses = 0\n",
+    "nperclass = []\n",
+    "classlabels = []\n",
+    "X = []\n",
+    "Y = []\n",
+    "\n",
+    "dpi = matplotlib.rcParams['figure.dpi']\n",
+    "\n",
+    "for class_name in os.listdir(folder):\n",
+    "    nclasses += 1\n",
+    "    nsamples = 0\n",
+    "\n",
+    "    class_folder = os.path.join(folder, class_name)\n",
+    "    for file_name in os.listdir(class_folder):\n",
+    "        if file_name.endswith('.jpg'):\n",
+    "            image = cv2.imread (os.path.join(class_folder, file_name),)\n",
+    "            image = cv2.resize(image, (640, 640))\n",
+    "            gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "            new_height, new_width = gray.shape\n",
+    "\n",
+    "            X.append(gray.reshape(new_height*new_width))\n",
+    "            Y.append(nclasses-1)\n",
+    "  \n",
+    "            nsamples += 1\n",
+    "    nperclass.append(nsamples)\n",
+    "    classlabels.append(class_name)\n",
+    "X = np.array(X,dtype='float32')\n",
+    "Y = np.array(Y,dtype='float64')\n",
+    "\n",
+    "\n",
+    "n_samples , n_features = X.shape\n",
+    "\n",
+    "class_names = np.array(classlabels)\n",
+    "n_classes = class_names.shape[0]\n",
+    "\n",
+    "print(\"Dataset info:\")\n",
+    "print(\"# features: %d\" % n_features)\n",
+    "print(\"# classes: %d\" % n_classes)\n",
+    "print(\"classes %s\" % classlabels)\n",
+    "print(\"samples per class %s\" % str(nperclass)[1:-1] )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,18 +97,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4917b719",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "VC_P5",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
