--- a/tareas.ipynb
+++ b/tareas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5f67eb66",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,9 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "from skimage.feature import hog"
    ]
   },
   {
@@ -36,10 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "84fa9c4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset info:\n",
+      "# features: 8100\n",
+      "# classes: 5\n",
+      "classes ['18-20', '21-30', '31-40', '41-50', '51-60']\n",
+      "samples per class 30, 30, 30, 30, 30\n"
+     ]
+    }
+   ],
    "source": [
     "folder = \"C:/Users/maria/Downloads/ages/train\" \n",
     "\n",
@@ -59,11 +73,15 @@
     "    for file_name in os.listdir(class_folder):\n",
     "        if file_name.endswith('.jpg'):\n",
     "            image = cv2.imread (os.path.join(class_folder, file_name),)\n",
-    "            image = cv2.resize(image, (640, 640))\n",
+    "            image = cv2.resize(image, (128, 128))\n",
     "            gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "            new_height, new_width = gray.shape\n",
+    "            features = hog(gray, \n",
+    "                           orientations=9,\n",
+    "                           pixels_per_cell=(8, 8),\n",
+    "                           cells_per_block=(2, 2),\n",
+    "                           block_norm='L2-Hys')\n",
     "\n",
-    "            X.append(gray.reshape(new_height*new_width))\n",
+    "            X.append(features)\n",
     "            Y.append(nclasses-1)\n",
     "  \n",
     "            nsamples += 1\n",
@@ -83,6 +101,92 @@
     "print(\"# classes: %d\" % n_classes)\n",
     "print(\"classes %s\" % classlabels)\n",
     "print(\"samples per class %s\" % str(nperclass)[1:-1] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7b5c3a0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# samples in training set 105\n",
+      "# samples in test set 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, Y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "print(\"# samples in training set %d\" % X_train.shape[0])\n",
+    "print(\"# samples in test set %d\" % X_test.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6e70e7c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM classifier based on HOG\n",
+      "Training...\n",
+      "done in 0.079s\n",
+      "Predicting...\n",
+      "done in 0.037s\n",
+      "Classification results:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       18-20       0.67      0.15      0.25        13\n",
+      "       21-30       0.50      0.33      0.40         9\n",
+      "       31-40       0.25      0.20      0.22        10\n",
+      "       41-50       0.14      0.75      0.24         4\n",
+      "       51-60       0.14      0.11      0.12         9\n",
+      "\n",
+      "    accuracy                           0.24        45\n",
+      "   macro avg       0.34      0.31      0.25        45\n",
+      "weighted avg       0.39      0.24      0.25        45\n",
+      "\n",
+      "Precision:  0.340, Recall:  0.310\n",
+      "Confusion matrix\n",
+      "[[2 3 3 3 2]\n",
+      " [1 3 1 3 1]\n",
+      " [0 0 2 6 2]\n",
+      " [0 0 0 3 1]\n",
+      " [0 0 2 6 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"SVM classifier based on HOG\\nTraining...\")\n",
+    "t0 = time()\n",
+    "\n",
+    "model_svm = SVC(kernel='rbf', C=5, gamma='scale')\n",
+    "model_svm.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"done in %0.3fs\" % (time() - t0))\n",
+    "\n",
+    "print(\"Predicting...\")\n",
+    "t0 = time()\n",
+    "y_pred = model_svm.predict(X_test)\n",
+    "print(\"done in %0.3fs\" % (time() - t0))\n",
+    "\n",
+    "print(\"Classification results:\")\n",
+    "print(classification_report(y_test, y_pred, target_names=class_names))\n",
+    "\n",
+    "print(\"Precision:  %0.3f, Recall:  %0.3f\" %\n",
+    "      (precision_score(y_test, y_pred, average='macro'),\n",
+    "       recall_score(y_test, y_pred, average='macro')))\n",
+    "\n",
+    "print(\"Confusion matrix\")\n",
+    "print(confusion_matrix(y_test, y_pred, labels=range(n_classes)))\n"
    ]
   },
   {
@@ -109,7 +213,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
