--- a/tareas.ipynb
+++ b/tareas.ipynb
@@ -35,13 +35,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83c055d6",
+   "metadata": {},
+   "source": [
+    "Organizamos las imágenes en carpetas para poder procesarlas correctamente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "51cc0470",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from shutil import copyfile\n",
+    "\n",
+    "csv_path = \"C:/Users/lllrm/Downloads/dataset_VC/fairface_label_train.csv\"\n",
+    "output_dir = \"C:/Users/lllrm/Downloads/dataset_VC/ages\"\n",
+    "image_path = \"C:/Users/lllrm/Downloads/dataset_VC\"\n",
+    "\n",
+    "df = pd.read_csv(csv_path)\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    age_group = row['age']\n",
+    "    src = os.path.join(image_path, row['file'])  # original image path\n",
+    "    dst = os.path.join(output_dir, age_group, os.path.basename(row['file']))  # ignore train/test subfolder\n",
+    "\n",
+    "    # Make sure the destination folder exists\n",
+    "    os.makedirs(os.path.dirname(dst), exist_ok=True)\n",
+    "\n",
+    "    # Copy the file if it exists\n",
+    "    if os.path.exists(src):\n",
+    "        copyfile(src, dst)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "84fa9c4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing class '1.jpg' \n"
+     ]
+    },
+    {
+     "ename": "NotADirectoryError",
+     "evalue": "[WinError 267] The directory name is invalid: 'C:/Users/lllrm/Downloads/dataset_VC/train\\\\1.jpg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNotADirectoryError\u001b[39m                        Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mProcessing class \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m % class_name)\n\u001b[32m     17\u001b[39m class_folder = os.path.join(folder, class_name)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclass_folder\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m     19\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m file_name.endswith(\u001b[33m'\u001b[39m\u001b[33m.jpg\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m     20\u001b[39m         image = cv2.imread (os.path.join(class_folder, file_name),)\n",
+      "\u001b[31mNotADirectoryError\u001b[39m: [WinError 267] The directory name is invalid: 'C:/Users/lllrm/Downloads/dataset_VC/train\\\\1.jpg'"
+     ]
+    }
+   ],
    "source": [
-    "folder = \"C:/Users/maria/Downloads/ages/train\" \n",
+    "folder = \"C:/Users/lllrm/Downloads/dataset_VC/train\"\n",
     "\n",
     "nclasses = 0\n",
     "nperclass = []\n",
@@ -109,7 +165,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
