Se corrigen errores y empieza el readme

--- a/tareas.ipynb
+++ b/tareas.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5f67eb66",
    "metadata": {},
    "outputs": [],
@@ -438,10 +438,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9edaec25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\maria\\anaconda3\\envs\\VC_P5\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "from deepface import DeepFace\n",
@@ -454,16 +463,96 @@
    "execution_count": null,
    "id": "31ef6d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: Face could not be detected in numpy array.Please confirm that the picture is a face photo or consider to set enforce_detection param to False.\n",
+      "Error: 'NoneType' object is not subscriptable\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n",
+      "Error: list index out of range\n"
+     ]
+    }
+   ],
    "source": [
     "def text(content, frame, y, color):\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "    thickness = 1\n",
     "    max_width = frame.shape[1] - 40  \n",
     "    scale = 0.7\n",
-    " \n",
-    "    (left_width, left_height), left_baseline = cv2.getTextSize(left_text, font, scale, thickness)\n",
-    "    (right_width, right_height), right_baseline = cv2.getTextSize(right_text, font, scale, thickness)\n",
     " \n",
     " \n",
     "    (text_width, text_height), baseline = cv2.getTextSize(content, font, scale, thickness)\n",
@@ -476,9 +565,10 @@
     "    y_text = y\n",
     "    cv2.putText(frame, content, (x_text, y_text), font, scale, color, thickness)\n",
     " \n",
-    "# Webcam connection\n",
+    "# Webcam \n",
     "cap = cv2.VideoCapture(0)\n",
     " \n",
+    "x0 = 0\n",
     "x_offset = 0\n",
     "is_selected = None\n",
     "new_question = False\n",
@@ -494,28 +584,34 @@
     "preguntas = file[\"preguntas\"]\n",
     "pregunta = None\n",
     "while True:\n",
-    "    # Read frame\n",
+    "    # Lee el frame\n",
     "    ret, frame = cap.read()\n",
-    "    frame = cv2.flip(frame, 1)  # Flip frame horizontally for mirror effect\n",
+    "    frame = cv2.flip(frame, 1)  # Girarlo horizontalmente por el efecto espejo\n",
     "    if not ret:\n",
     "        break\n",
     " \n",
     "    try:\n",
-    "        # Face detection\n",
+    "        # Detección de cara\n",
     "        faces = DeepFace.extract_faces(frame, detector_backend='opencv')\n",
-    "        #print(faces)\n",
     "\n",
     "        if index_pregunta >= len(preguntas):\n",
     "            text(\"Se han terminado las preguntas.\", frame, 140, (0,0,0))\n",
+    "            porcentaje = int((score / len(preguntas)) * 100)\n",
+    "            text(f\"Tu puntuacion es: {porcentaje}%\", frame, 180, (0,0,0))\n",
     " \n",
-    "        # Draw line in the middle\n",
+    "        # Dibuja una línea en el medio\n",
     "        cv2.line(frame, (frame.shape[1]//2, 0), (frame.shape[1]//2, frame.shape[0]), (255, 0, 0), 1)\n",
-    "        if pregunta is None or new_question:\n",
+    "        if pregunta is None:\n",
     "            pregunta = preguntas[index_pregunta]\n",
+    "        if new_question:\n",
     "            index_pregunta += 1\n",
     "            new_question = False\n",
+    "        if index_pregunta < len(preguntas):\n",
+    "            pregunta = preguntas[index_pregunta]\n",
+    "        else:\n",
+    "            pregunta = None\n",
     "       \n",
-    "        # Show question text\n",
+    "        # Muestra el texto de las pregunta\n",
     "        font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "        thickness = 1\n",
     "        max_width = frame.shape[1] - 40  \n",
@@ -529,8 +625,12 @@
     "        cv2.rectangle(frame, (0, 0), (frame.shape[1], p_height + p_baseline + 50), (255, 255, 255), -1)\n",
     " \n",
     "        text(pregunta[\"pregunta\"], frame, 50, (0,0,0))\n",
+    "\n",
+    "        (left_width, left_height), left_baseline = cv2.getTextSize(left_text, font, scale, thickness)\n",
+    "        (right_width, right_height), right_baseline = cv2.getTextSize(right_text, font, scale, thickness)\n",
+    " \n",
     "        \n",
-    "        # Show True text\n",
+    "        # Muestra la opción 'True'\n",
     "        padding = 10\n",
     "        x_left = 10\n",
     "        (left_width, left_height), left_baseline = cv2.getTextSize(left_text, font, scale, thickness)\n",
@@ -539,7 +639,7 @@
     "        cv2.rectangle(frame, (x_left - padding, top_left), (x_left + left_width + padding, bottom_left), (0, 0, 0), -1)\n",
     "        cv2.putText(frame, left_text, (x_left, frame.shape[0] - 20), font, scale, (0, 255, 0), thickness)\n",
     " \n",
-    "        # Show False text\n",
+    "        # Muestra la opción 'False'\n",
     "        x_right = frame.shape[1] - right_width - 10\n",
     "        (right_width, right_height), right_baseline = cv2.getTextSize(right_text, font, scale, thickness)\n",
     "        top_right = frame.shape[0] - 20 - right_height - padding // 2\n",
@@ -547,13 +647,13 @@
     "        cv2.rectangle(frame, (x_right - padding, top_right), (x_right + right_width + padding, bottom_right), (0, 0, 0), -1)\n",
     "        cv2.putText(frame, right_text, (x_right, frame.shape[0] - 20), font, scale, (0, 0, 255), thickness)\n",
     "\n",
-    "        # Print score\n",
-    "        score_text = f\"Score: {score}\"\n",
+    "        # Imprime la puntuación\n",
+    "        score_text = f\"Puntos: {score}\"\n",
     "        cv2.putText(frame, score_text, (x_left, 100), font, scale, (0, 0, 0), 2)\n",
     "\n",
     " \n",
     "\n",
-    "        # Show correct/incorrect answer texti\n",
+    "        # Enseña respuesta correcta/incorrecta\n",
     "        if answer == 0:\n",
     "            text(\"Respuesta correcta\", frame, 100, (0, 255, 0))\n",
     "            delay += 1\n",
@@ -573,22 +673,22 @@
     " \n",
     "        frame_width = frame.shape[1]\n",
     " \n",
-    "        # Draw face bounding box and eyes locations\n",
+    "        # Dibuja el cuadro delimitador de la cara y las ubicaciones de los ojos\n",
     "        for face in faces:\n",
     "            x, y, w, h = face['facial_area']['x'], face['facial_area']['y'], face['facial_area']['w'], face['facial_area']['h']\n",
-    "            # Save starting position for the first frame\n",
+    "            # Guarda la posición inicial para el primer frame\n",
     "            if x0 == 0:\n",
     "                x0 = frame_width // 2\n",
     "            # Izquierda\n",
     "            elif x_offset < -(0.1*frame_width):\n",
-    "                # Consider that the person has tilted their head towards the left\n",
+    "                # Se considera que la persona ha inclinado la cabeza hacia la izquierda\n",
     "                x_offset = 0\n",
     "                # Dibujar un rectángulo sin relleno\n",
     "                cv2.rectangle(frame, (x_left - padding, top_left), (x_left + left_width + padding, bottom_left), (255, 255, 255), 2)\n",
     "                is_selected = 0\n",
     "            # Derecha\n",
     "            elif x_offset > (0.1*frame_width):\n",
-    "                # Consider that the person has tilted their head towards the right\n",
+    "                # Se considera que la persona ha inclinado la cabeza hacia la derecha\n",
     "                x_offset = 0   \n",
     "                cv2.rectangle(frame, (x_right - padding, top_right), (x_right + right_width + padding, bottom_right), (255, 255, 255), 2) \n",
     "                is_selected = 1\n",
