Limpiamos el código y añadimos un poco de contexto

--- a/tareas.ipynb
+++ b/tareas.ipynb
@@ -26,22 +26,18 @@
     "import os\n",
     "import numpy as np\n",
     "import cv2\n",
-    "\n",
-    "from matplotlib import pyplot as plt\n",
-    "import matplotlib \n",
-    "\n",
     "from time import time\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import precision_score, recall_score\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "from skimage.feature import hog"
+    "from sklearn.metrics import precision_score, recall_score, classification_report, confusion_matrix\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from time import time\n",
+    "import joblib\n",
+    "from deepface import DeepFace\n",
+    "from collections import deque\n",
+    "import pandas as pd\n",
+    "from shutil import copyfile\n",
+    "from tqdm import tqdm  "
    ]
   },
   {
@@ -62,14 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "51cc0470",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from shutil import copyfile\n",
     "\n",
+    "# Hay que modificar las siguientes rutas segun donde se tenga el dataset\n",
     "csv_path = \"C:/Users/lllrm/Downloads/dataset_VC/fairface_label_train.csv\"\n",
     "output_dir = \"C:/Users/lllrm/Downloads/dataset_VC/ages\"\n",
     "image_path = \"C:/Users/lllrm/Downloads/dataset_VC\"\n",
@@ -94,7 +89,7 @@
    "id": "5407b331",
    "metadata": {},
    "source": [
-    "## Entrenamiento"
+    "## Entrenamiento (Deepface embeddings)"
    ]
   },
   {
@@ -102,12 +97,12 @@
    "id": "532342cd",
    "metadata": {},
    "source": [
-    "Con DeepFace embeddings"
+    "Creación de embeddings de todas las imágenes de entrenamiento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b42196bf",
    "metadata": {},
    "outputs": [
@@ -135,11 +130,7 @@
     }
    ],
    "source": [
-    "from deepface import DeepFace\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "import os\n",
-    "from tqdm import tqdm  # optional progress bar\n",
+    "\n",
     "\n",
     "folder = \"C:/Users/lllrm/Downloads/dataset_VC/ages\"\n",
     "\n",
@@ -189,6 +180,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3693670",
+   "metadata": {},
+   "source": [
+    "División del dataset entre entrenamiento y validación"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "13764234",
@@ -209,10 +208,18 @@
     "    Y = np.load(\"Y_embeddings.npy\")\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, Y, test_size=0.3, random_state=42)\n",
+    "    X, Y, test_size=0.2, random_state=42)\n",
     "\n",
     "print(\"# samples in training set %d\" % X_train.shape[0])\n",
     "print(\"# samples in test set %d\" % X_test.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "556dadbd",
+   "metadata": {},
+   "source": [
+    "Entrenamiento del modelo con los embeddings obtenidos"
    ]
   },
   {
@@ -259,18 +266,10 @@
     }
    ],
    "source": [
-    "from sklearn.svm import LinearSVC\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, precision_score, recall_score\n",
-    "import joblib\n",
-    "from time import time\n",
     "\n",
     "model_svm = LinearSVC(C=5, dual=False, max_iter=5000)\n",
     "\n",
     "X = np.load(\"X_embeddings.npy\")\n",
-    "\n",
-    "# Train/test split (if not already done)\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, stratify=Y, random_state=42)\n",
     "\n",
     "print(\"Training SVM on embeddings...\")\n",
     "t0 = time()\n",
@@ -280,13 +279,20 @@
     "joblib.dump(model_svm, \"svm_deepface_embeddings.joblib\")\n",
     "print(\"Model saved!\")\n",
     "\n",
-    "# Evaluate\n",
     "y_pred = model_svm.predict(X_test)\n",
     "print(classification_report(y_test, y_pred, target_names=classlabels))\n",
     "print(\"Precision: %0.3f, Recall: %0.3f\" %\n",
     "      (precision_score(y_test, y_pred, average=\"macro\"),\n",
     "       recall_score(y_test, y_pred, average=\"macro\")))\n",
     "print(\"Confusion matrix:\\n\", confusion_matrix(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "401f05f3",
+   "metadata": {},
+   "source": [
+    "Ejecucion final del modelo entrenado"
    ]
   },
   {
@@ -299,6 +305,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\Users\\lllrm\\anaconda3\\envs\\VC_P5\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
       "Loading SVM model...\n",
       "Loading class labels...\n",
       "Loading Facenet embedding model...\n",
@@ -308,11 +316,6 @@
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "from deepface import DeepFace\n",
-    "import joblib\n",
-    "from collections import deque\n",
     "\n",
     "def expand_box(x, y, w, h, scale=1.3):\n",
     "    cx = x + w // 2\n",
@@ -325,15 +328,12 @@
     "\n",
     "\n",
     "def preprocess_face(face_crop):\n",
-    "    # Resize to Facenet standard\n",
     "    face_resized = cv2.resize(face_crop, (160, 160))\n",
     "\n",
-    "    # Histogram normalization for better lighting\n",
     "    face_yuv = cv2.cvtColor(face_resized, cv2.COLOR_BGR2YUV)\n",
     "    face_yuv[:, :, 0] = cv2.equalizeHist(face_yuv[:, :, 0])\n",
     "    face_norm = cv2.cvtColor(face_yuv, cv2.COLOR_YUV2BGR)\n",
     "\n",
-    "    # Convert to RGB for DeepFace\n",
     "    return cv2.cvtColor(face_norm, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "\n",
@@ -348,9 +348,8 @@
     "            enforce_detection=False\n",
     "        )\n",
     "\n",
-    "        # If DeepFace gives no embedding → force fallback\n",
     "        if embedding is None or len(embedding) == 0:\n",
-    "            print(\"⚠ No embedding — forcing prediction.\")\n",
+    "            print(\"No embedding, forcing prediction...\")\n",
     "            vec = np.random.rand(1, 512).astype(\"float32\")\n",
     "        else:\n",
     "            vec = np.array(embedding[0][\"embedding\"]).reshape(1, -1)\n",
@@ -359,17 +358,16 @@
     "        return pred_class\n",
     "\n",
     "    except:\n",
-    "        # Hard fallback\n",
     "        vec = np.random.rand(1, 512).astype(\"float32\")\n",
     "        pred_class = model_svm.predict(vec)[0]\n",
     "        return pred_class\n",
     "\n",
-    "pred_buffer = deque(maxlen=12)   # last 12 frame predictions\n",
+    "# Predecir con respecto a los últimos 12 frames \n",
+    "pred_buffer = deque(maxlen=12)\n",
     "\n",
     "\n",
     "def smooth_prediction(pred_class):\n",
     "    pred_buffer.append(pred_class)\n",
-    "    # return most common in buffer\n",
     "    return max(set(pred_buffer), key=pred_buffer.count)\n",
     "\n",
     "\n",
@@ -411,10 +409,8 @@
     "\n",
     "        age_label = str(classlabels[smooth_pred])\n",
     "\n",
-    "        # Draw rectangle\n",
     "        cv2.rectangle(frame, (x2, y2), (x2+w2, y2+h2), (0, 255, 0), 2)\n",
     "\n",
-    "        # Draw label\n",
     "        cv2.putText(frame, f\"Age: {age_label}\",\n",
     "                    (x2, y2 - 10), cv2.FONT_HERSHEY_SIMPLEX,\n",
     "                    0.9, (0, 255, 0), 2)\n",
@@ -437,6 +433,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fbafd76",
+   "metadata": {},
+   "source": [
+    "Dependencias exclusivas de la tarea 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9edaec25",
@@ -447,6 +451,14 @@
     "from deepface import DeepFace\n",
     "import json\n",
     "import random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e95f7edf",
+   "metadata": {},
+   "source": [
+    "Implementación del \"filtro\""
    ]
   },
   {
