Pequeños arreglos de formato

--- a/tareas.ipynb
+++ b/tareas.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "31ef6d1d",
    "metadata": {},
    "outputs": [
@@ -600,8 +600,8 @@
     "    x_text = (frame_width - text_width) // 2\n",
     "    y_text = y\n",
     "    cv2.putText(frame, content, (x_text, y_text), font, scale, color, thickness)\n",
-    " \n",
-    "# Webcam \n",
+    "\n",
+    "# Captura de la webcam\n",
     "cap = cv2.VideoCapture(0)\n",
     " \n",
     "x0 = 0\n",
